--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:1 Score:39.0\n",
+      "Episode:2 Score:26.0\n",
+      "Episode:3 Score:10.0\n",
+      "Episode:4 Score:10.0\n",
+      "Episode:5 Score:14.0\n",
+      "Episode:6 Score:10.0\n",
+      "Episode:7 Score:13.0\n",
+      "Episode:8 Score:23.0\n",
+      "Episode:9 Score:26.0\n",
+      "Episode:10 Score:11.0\n"
+     ]
+    }
+   ],
    "source": [
     "episodes = 10\n",
     "for episode in range (1, episodes+1):\n",
@@ -57,6 +74,75 @@
    "metadata": {},
    "source": [
     "## 2) Creating a deep learning Model with Keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten\n",
+    "from tensorflow.keras.optimizers import Adam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(states, actions):\n",
+    "    model = Sequential()\n",
+    "    model.add(Flatten(input_shape=(1, states)))\n",
+    "    model.add(Dense(24, activation='relu'))\n",
+    "    model.add(Dense(24, activation='relu'))\n",
+    "    model.add(Dense(actions, activation='linear'))\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = build_model(states,actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten (Flatten)           (None, 4)                 0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 24)                120       \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 24)                600       \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 2)                 50        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 770\n",
+      "Trainable params: 770\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
