--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +31,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode:1 Score:39.0\n",
-      "Episode:2 Score:26.0\n",
+      "Episode:1 Score:12.0\n",
+      "Episode:2 Score:40.0\n",
       "Episode:3 Score:10.0\n",
-      "Episode:4 Score:10.0\n",
-      "Episode:5 Score:14.0\n",
-      "Episode:6 Score:10.0\n",
-      "Episode:7 Score:13.0\n",
-      "Episode:8 Score:23.0\n",
-      "Episode:9 Score:26.0\n",
-      "Episode:10 Score:11.0\n"
+      "Episode:4 Score:27.0\n",
+      "Episode:5 Score:8.0\n",
+      "Episode:6 Score:14.0\n",
+      "Episode:7 Score:12.0\n",
+      "Episode:8 Score:15.0\n",
+      "Episode:9 Score:21.0\n",
+      "Episode:10 Score:13.0\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -143,6 +151,38 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3) Build Agent with Keras-RL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rl.agents import DQNAgent\n",
+    "from rl.policy import BoltzmannQPolicy\n",
+    "from rl.memory import SequentialMemory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_agent(model, actions):\n",
+    "    policy = BoltzmannQPolicy()\n",
+    "    memory = SequentialMemory(limit = 50000, window_length=1)\n",
+    "    dqn  = DQNAgent(model = model, memory = memory, policy = policy, nb_actions = actions, nb_steps_warmup = 10, target_model_update ='le-2')\n",
+    "    return dqn\n"
    ]
   },
   {
